<?xml version="1.0"?>
<package>
  <name>move_humans</name>

  <version>0.1.0</version>

  <description>The move_humans package</description>

  <maintainer email="harmish@laas.fr">Harmish Khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>TODO</license>

  <!--  <url website >http://wiki.ors.org/move_humans</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hanp_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>navfn</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>clear_costmap_recovery</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hanp_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!--  <test_depend>some_pkg</test_depend>  -->

  <!--  <conflict>some_pkg</conflict>  -->

  <!--  <replace>some_pkg</replace>  -->

  <export>
    <!-- <metapackage/> -->

  </export>
</package>
