<?xml version="1.0"?>
<package>
  <name>move_humans_config</name>

  <version>0.1.0</version>

  <description>The move_humans_config package</description>

  <maintainer email="harmish@laas.fr">Harmish Khambhaita</maintainer>

  <!--  <author email="harmish@laas.fr">Harmish Khambhaita</author>  -->

  <license>TODO</license>

  <!--  <url website >http://wiki.ors.org/move_humans_config</url>  -->

  <buildtool_depend>catkin</buildtool_depend>
</package>
