<?xml version="1.0"?>
<package>
  <name>move_humans_viz</name>

  <version>0.1.0</version>

  <description>The move_humans_viz package</description>

  <maintainer email="harmish@laas.fr">Harmish Khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>TODO</license>

  <!--  <url website >http://wiki.ors.org/move_humans_viz</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <!--  <build_depend>some_pkg</build_depend>  -->

  <!--  <run_depend>some_pkg</run_depend>  -->

  <!--  <test_depend>some_pkg</test_depend>  -->

  <!--  <conflict>some_pkg</conflict>  -->

  <!--  <replace>some_pkg</replace>  -->

  <export>
    <!-- <metapackage/> -->

  </export>
</package>
