<?xml version="1.0"?>
<package>
  <name>multigoal_planner</name>

  <version>0.2.0</version>

  <description>The multigoal_planner package</description>

  <maintainer email="harmish@laas.fr">Harmish Khambhaita</maintainer>

  <!--  <author email="harmish@laas.fr">Harmish Khambhaita</author>  -->

  <license>TODO</license>

  <!--  <url website >http://wiki.ors.org/multigoal_planner</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>hanp_msgs</build_depend>
  <build_depend>move_humans</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>hanp_msgs</run_depend>
  <run_depend>move_humans</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
        <move_humans plugin="${prefix}/planner_plugin.xml" />
  </export>
</package>
